# appointment_booking

./: Cargo.toml  README.md
src/: appointment.rs  cli.rs  lib.rs  main.rs  utils.rs
tests/: appointment_tests.rs
