[package]
authors = ["Georgios Oxinos"]
description = "Appointment scheduling optimizer"
edition = "2021"
name = "appointment_booking"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
dialoguer = "0.11.0"
lazy_static = "1.4.0"
rand = "0.8.5"
